--- a/style.css
+++ b/style.css
@@ -121,10 +121,11 @@ html, body{
 
 #hero{
     width: 100%;
-    height: 90%;
+    height: 950px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 #left-hero{
@@ -521,5 +522,125 @@ html, body{
   input[type="submit"]:hover {
     background-color: #0056b3;
   }
-  
+
+  /* //////////////TESTIMONIALS///////////////////// */
+#testimonials{
+    padding:100px 0px;
+
+}
+#testimonials .col-md-4{
+    padding: 10px 30px;
+}
+#testimonials img{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    margin-left: -30px;
+    margin-top: -40px;
+    /* box-shadow: 0 0 5px 10px rgba(0,0,0,0,5); */
+}
+.review{
+    font-size: 16px;
+    padding: 10px 10px 10px 30px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.2);
+}
+.review .fa-twitter{
+    color: #013f7e;
+}
+#testimonials span{
+    color: #000000;
+    font-size: 18px;
+    font-weight: 600;   
+
+}
+#testimonials h1{
+    margin-bottom: 20px;
+    color: #000000;
+    letter-spacing: 5px;
+}
+#testimonials .middle{
+    /* margin-bottom:-30px ; */
+    margin-top: -24px;
+    /* border: 2px solid red; */
+}
+/* .container{
+    display: flex;
+} */
+.space-b{
+    margin-bottom: 3rem;
+}
+.offer{
+    margin-bottom: 5rem;
+}
+/* Gallery Section Styles */
+#gallery {
+    background-color: #f8f9fa;
+    padding: 80px 0;
+}
+
+#gallery h1 {
+    color: #000000;
+    font-size: 2.5rem;
+    margin-bottom: 30px;
+}
+
+#gallery p {
+    color: #495057;
+    font-size: 1.2rem;
+    margin-bottom: 50px;
+}
+
+#gallery img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+    transition: transform 0.3s ease-in-out;
+}
+
+#gallery img:hover {
+    transform: scale(1.05);
+}
+
+/* FAQ Section Styles */
+#faq {
+    background-color: #f8f9fa;
+    padding: 80px 0;
+}
+
+#faq h1 {
+    color: #000000;
+    font-size: 2.5rem;
+    margin-bottom: 30px;
+}
+
+#faq p {
+    color: #495057;
+    font-size: 1.2rem;
+    margin-bottom: 50px;
+}
+.accordion-button {
+    background-color: #007bff;
+    color: #fff;
+    font-size: 1.2rem;
+}
+
+.accordion-button:hover {
+    background-color: #0056b3;
+}
+
+.accordion-body {
+    color: #495057;
+    font-size: 1rem;
+}
+.galimg {
+    max-width: 100%;
+    height: 200px; /* Set the fixed height as needed */
+    border-radius: 8px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.galimg:hover {
+    transform: scale(1.05);
+}
  
