--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "gilroy";
+
 }
 
 a{
@@ -13,6 +14,7 @@ a{
 html, body{
     width: 100%;
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 #main{
